v0.4/guides/realtime/websockets.mdx
---
title: "WebSockets"
description: "Build realtime features with WebSocket handlers and routes."
icon: "tower-broadcast"
---

Bejibun has first-class WebSocket support built on Bun's native server.
You define handlers much like controllers and wire them up through WebSocket routes.

## Defining a handler

WebSocket handlers extend `BaseWebSocket` and live in `app/websockets/`:

```ts app/websockets/ChatWebSocket.ts
import BaseWebSocket from "@bejibun/core/bases/BaseWebSocket";

export default class ChatWebSocket extends BaseWebSocket {
    public async handle(
        ws: Bun.ServerWebSocket<any>,
        message: string | Buffer<ArrayBuffer>
    ): Promise<void> {
        for (const connection of super.connections) {
            if (connection.data.id !== ws.data.id) {
                if (connection.readyState === 1) {
                    connection.send(message);
                }
            }
        }
    }
}
```

## Registering routes

Declare WebSocket routes in `routes/websocket.ts`:

```ts routes/websocket.ts
import Router from "@bejibun/core/facades/Router";

export default Router.prefix("chat").group([Router.websocket("/", "ChatWebSocket@handle")]);
```

`Router.websocket(path, "Class@method")` upgrades matching requests and dispatches incoming messages to your handler method.

## Connections and broadcasting

`BaseWebSocket` groups connections by their route path and gives you:

| Member                     | Description                                          |
| -------------------------- | ---------------------------------------------------- |
| `super.connections`        | Active connections on this handler's path            |
| `super.broadcast(message)` | Send a message to every open connection on this path |

Each connection carries `ws.data = { id, path }`, where `id` is a unique per-connection identifier.

```ts
public async handle(ws: Bun.ServerWebSocket<any>, message: string | Buffer<ArrayBuffer>): Promise<void> {
    super.broadcast(message); // send to everyone on this path
}
```

## Lifecycle

The server manages the connection lifecycle automatically:

<Steps>
    <Step title="open">Registers the connection for its path and logs it.</Step>
    <Step title="message">Routes the message to your handler method.</Step>
    <Step title="close">Removes the connection and logs the disconnect.</Step>
</Steps>

## Configuration

Tune the underlying Bun WebSocket server in `config/websocket.ts`:

```ts config/websocket.ts
const config: Record<string, any> = {
    maxPayloadLength: 1024 * 1024 * 16,

    backpressureLimit: 1024 * 1024 * 16,

    closeOnBackpressureLimit: false,

    idleTimeout: 60,

    publishToSelf: false,

    sendPings: false
};

export default config;
```
